--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.project.geriarticcare">
 
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -11,17 +12,27 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name="com.project.geriarticcare.medicine.MedicineActivity">
+        <activity android:name="com.project.geriarticcare.medicine.MedicineActivity"
+            android:exported="false">
+        </activity>
+        <!-- <activity android:name=".MainActivity" /> -->
+        <activity android:name="com.project.geriarticcare.addmedicine.AddMedicineActivity" android:exported="false"/>
+        <activity android:name="com.project.geriarticcare.alarm.ReminderActivity" android:exported="false"/>
+        <activity android:name="com.project.geriarticcare.report.MonthlyReportActivity" android:exported="false"/>
+        <activity android:name=".loginRegistration.CaretakerLoginPage" android:exported="false"/>
+        <activity android:name=".loginRegistration.ElderlyLoginPage" android:exported="false"/>
+        <activity android:name=".loginRegistration.MainActivity" android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- <activity android:name=".MainActivity" /> -->
-        <activity android:name="com.project.geriarticcare.addmedicine.AddMedicineActivity" />
-        <activity android:name="com.project.geriarticcare.alarm.ReminderActivity" />
-        <activity android:name="com.project.geriarticcare.report.MonthlyReportActivity"/>
+        <activity android:name=".loginRegistration.NGOLoginPage" android:exported="false"/>
+        <activity android:name=".loginRegistration.CaretakerRegistrationPage" android:exported="false"/>
+        <activity android:name=".loginRegistration.NGORegistrationPage" android:exported="false"/>
+        <activity android:name=".loginRegistration.ElderlyRegistrationPage" android:exported="false"/>
+
     </application>
 
 </manifest>
