--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
-        
+        classpath 'com.google.gms:google-services:4.3.13'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,6 +20,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
@@ -27,8 +29,8 @@ task clean(type: Delete) {
 }
 
 ext {
-    minSdkVersion = 16
-    targetSdkVersion = 29
+    minSdkVersion = 21
+    targetSdkVersion = 32
     compileSdkVersion = 259
 
     //App Dependencies Version
