added activity for caretaker login and registration

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
+        <activity
+            android:name=".authentication.CaretakerRegistrationPage"
+            android:exported="false" />
+        <activity
+            android:name=".authentication.CaretakerLoginPage"
+            android:exported="false" />
         <activity android:name="com.project.geriarticcare.medicine.MedicineActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- <activity android:name=".MainActivity" /> -->
+        </activity> <!-- <activity android:name=".MainActivity" /> -->
         <activity android:name="com.project.geriarticcare.addmedicine.AddMedicineActivity" />
         <activity android:name="com.project.geriarticcare.alarm.ReminderActivity" />
-        <activity android:name="com.project.geriarticcare.report.MonthlyReportActivity"/>
+        <activity android:name="com.project.geriarticcare.report.MonthlyReportActivity" />
     </application>
 
 </manifest>
