--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.project.geriarticcare">
-
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -12,10 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".ElderlyRegistrationPage"
+            android:name=".authentication.NGOLoginPage"
+            android:exported="false"
+            android:label="@string/title_activity_ngologin_page"
+            android:theme="@style/AppTheme.NoActionBar.NoActionBar" />
+        <activity
+            android:name=".authentication.NGORegistrationPage"
             android:exported="false" />
         <activity
-            android:name=".ElderlyLogin"
+            android:name=".authentication.ElderlyRegistrationPage"
+            android:exported="false" />
+        <activity
+            android:name=".authentication.ElderlyLoginPage"
             android:exported="false" />
         <activity
             android:name=".authentication.CaretakerRegistrationPage"
